{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 32,
  "lineage": "b773825b-1baf-a986-5fa2-a04e21ca7454",
  "resources": [
    {
      "module": "module.slacko-app",
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "module.slacko-app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522708997688:subnet/subnet-06df0367ebc94ff4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.102.0/24",
            "default_for_az": false,
            "id": "subnet-06df0367ebc94ff4b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "522708997688",
            "state": "available",
            "tags": {
              "Name": "my-vpc-public-us-east-1c"
            },
            "vpc_id": "vpc-0aec82579257f768e"
          }
        }
      ]
    },
    {
      "module": "module.slacko-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongodb",
      "provider": "module.slacko-app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0617c50b76e1c51f6",
            "arn": "arn:aws:ec2:us-east-1:522708997688:instance/i-05452e308c146e236",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05452e308c146e236",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "slacko-app-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07a1590b656a2623d",
            "private_dns": "ip-10-0-102-74.ec2.internal",
            "private_ip": "10.0.102.74",
            "public_dns": "ec2-3-82-47-238.compute-1.amazonaws.com",
            "public_ip": "3.82.47.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01585f2fd2b76937f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06df0367ebc94ff4b",
            "tags": {
              "Environment": "rafael",
              "Name": "rafaelsantos-app",
              "Terraform": "impacta"
            },
            "tags_all": {
              "Environment": "rafael",
              "Name": "rafaelsantos-app",
              "Terraform": "impacta"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08d4473208de4fbe7"
            ]
          },
          "dependencies": [
            "module.slacko-app.aws_key_pair.slacko-sshkey",
            "module.slacko-app.data.aws_ami.slacko-app",
            "module.slacko-app.data.aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.slacko-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "slacko-app",
      "provider": "module.slacko-app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0617c50b76e1c51f6",
            "arn": "arn:aws:ec2:us-east-1:522708997688:instance/i-0a715533642484eb4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a715533642484eb4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "slacko-app-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-035b4d1a285d905e6",
            "private_dns": "ip-10-0-102-150.ec2.internal",
            "private_ip": "10.0.102.150",
            "public_dns": "ec2-54-85-67-87.compute-1.amazonaws.com",
            "public_ip": "54.85.67.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06c391e9a221e611e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06df0367ebc94ff4b",
            "tags": {
              "Environment": "rafael",
              "Name": "rafaelsantos-app",
              "Terraform": "impacta"
            },
            "tags_all": {
              "Environment": "rafael",
              "Name": "rafaelsantos-app",
              "Terraform": "impacta"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08d4473208de4fbe7"
            ]
          },
          "dependencies": [
            "module.slacko-app.aws_key_pair.slacko-sshkey",
            "module.slacko-app.data.aws_ami.slacko-app",
            "module.slacko-app.data.aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.slacko-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-mongodb",
      "provider": "module.slacko-app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522708997688:security-group/sg-0780372d6fcccef4b",
            "description": "Allow MongoDB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0780372d6fcccef4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow MongoDB",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "allow_mongodb",
            "name_prefix": "",
            "owner_id": "522708997688",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "rafael",
              "Name": "rafaelsantos-app",
              "Terraform": "impacta"
            },
            "tags_all": {
              "Environment": "rafael",
              "Name": "rafaelsantos-app",
              "Terraform": "impacta"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aec82579257f768e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.slacko-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-slacko",
      "provider": "module.slacko-app.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:522708997688:security-group/sg-06f5691e923e9c4f0",
            "description": "Allow ssh and http port",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f5691e923e9c4f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http",
            "name_prefix": "",
            "owner_id": "522708997688",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "rafael",
              "Name": "rafaelsantos-app",
              "Terraform": "impacta"
            },
            "tags_all": {
              "Environment": "rafael",
              "Name": "rafaelsantos-app",
              "Terraform": "impacta"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aec82579257f768e"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}